# ORB_SLAM3_detailed_comments

./: CMakeLists.txt  README.md  build_orb.sh  build_ros.sh  euroc_examples.sh
Examples/Calibration/: recorder_realsense_D435i  recorder_realsense_T265
Examples/Monocular/: mono_realsense_D435i
Examples/RGB-D/: rgbd_realsense_D435i
Examples/RGB-D-Inertial/: rgbd_inertial_realsense_D435i
Examples/ROS/ORB_SLAM3/: CMakeLists.txt
Examples/ROS/ORB_SLAM3/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
Examples/Stereo-Inertial/: stereo_inertial_realsense_D435i
Examples_old/Monocular/: mono_realsense_t265_old
Examples_old/Monocular-Inertial/: mono_inertial_realsense_D435i_old  mono_inertial_realsense_t265_old
Examples_old/Stereo/: stereo_realsense_D435i_old  stereo_realsense_t265_old
Examples_old/Stereo-Inertial/: stereo_inertial_realsense_t265_old
